# portfolio

./: .gitattributes  .gitignore  README.md  contact.md
cuda-demux/: CMakeLists.txt  LICENSE  README.md  install_cuda.py
cuda-demux/include/: bcl_parser.h  demux.h  fastq_writer.h
cuda-demux/src/: demux.cu  main.cpp
cuda-demux/tests/: test_demux.cpp
projects/comp_bio/Basic_alignment_NF_SM/: .gitignore  Project Structure.md  README.md  Snakefile  config.yaml  dockerfile  environment.yml  main.nf  nextflow.config  run_pipeline.sh
projects/comp_bio/Basic_alignment_NF_SM/utils/: generate_config.py  (+1 more)
projects/data_science/MosquitoAlert2023/: README.md  id_rsa_mosquito  id_rsa_mosquito.pub  requirements.txt
projects/data_science/World_happyness_index/: training.py
projects/data_science/covid_19/: difference_in_confirmed_cases_italy_germany.py  exponential_curve_fitting_italy_covid_cases.py  f1_score_death_rates_population_65.py  probability_gdp_hospital_beds.py  third_highest_death_rate_country.py
projects/engineering/mental-health-assistant/: README.md  package.json
projects/engineering/spotify_1M/: collaborative_filtering_surprise.py  instructions.md  matrix_factorization_lightfm.py  neural_collaborative_filtering_pytorch.py
projects/safety/PII_mail_checker/: .eslintrc.js  .gitattributes  .gitignore  CROSS_PLATFORM_ANALYSIS.md  Dockerfile  PLATFORM_READY.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  jest.config.js  package-lock.json  package.json  server.js  setup.bat  setup.sh  test-consistency.js
skills/: skills.md
(+19 files in other folders)
